Updates to qf_bootloader so that it uses usb2serial + sw flash, instead of usb2flash.  Update to qf_helloworldsw to use same usb2serial.bat
Note: in qf_apps there is a 'make all' and a 'make mfgpkg'

--- a/qf_apps/makefile
+++ b/qf_apps/makefile
@@ -1,10 +1,13 @@
 BINS = qf_helloworldsw/GCC_Project/output/bin/qf_helloworldsw.bin\
 	qf_helloworldhw/GCC_Project/output/bin/qf_helloworldhw.bin\
 	qf_advancedfpga/GCC_Project/output/bin/qf_advancedfpga.bin\
-	qf_bootloader/GCC_Project/output/bin/qf_bootloader.bin
+	qf_bootloader/GCC_Project/output/bin/qf_bootloader.bin\
+	qf_loadflash/GCC_Project/output/bin/qf_loadflash.bin
 
 MFGBINS = qf_bootloader/GCC_Project/output/bin/qf_bootloader.bin\
-	  qf_helloworldsw/GCC_Project/output/bin/qf_helloworldsw.bin
+		qf_bootloader/fpga/qf_bootfpga.bin\
+		qf_loadflash/GCC_Project/output/bin/qf_loadflash.bin\
+		qf_helloworldsw/GCC_Project/output/bin/qf_helloworldsw.bin
 all:	$(BINS)
 
 clean:
@@ -31,3 +34,6 @@ qf_advancedfpga/GCC_Project/output/bin/qf_advancedfpga.bin:
 
 qf_bootloader/GCC_Project/output/bin/qf_bootloader.bin:
 	cd qf_bootloader/GCC_Project/ && make
+	
+qf_loadflash/GCC_Project/output/bin/qf_loadflash.bin:
+	cd qf_loadflash/GCC_Project/ && make
