Updated makefiles for qf_helloworldhw to run new ql_symbiflow (-k became -P) and to correctly handle FreeRTOS dependencies

--- a/qf_apps/qf_helloworldhw/GCC_Project/makefiles/Makefile_common
+++ b/qf_apps/qf_helloworldhw/GCC_Project/makefiles/Makefile_common
@@ -22,7 +22,7 @@ $(OUTPUT_PATH)/%.o: $(SRC_PATH)/%.c $(DEPEND_PATH)/%.d
 	touch $@
 	
 $(MAIN_FPGA_RTL_DIR)/$(FPGA_RTL_OBJ): $(R_FILES)
-	ql_symbiflow  -compile -src $(MAIN_FPGA_RTL_DIR) -d ql-eos-s3 -t $(RTL_TOP_MODULE) -v $(FPGA_RTL_SRCS) -p quickfeather.pcf -k PU64 -dump header
+	ql_symbiflow  -compile -src $(MAIN_FPGA_RTL_DIR) -d ql-eos-s3 -t $(RTL_TOP_MODULE) -v $(FPGA_RTL_SRCS) -p quickfeather.pcf -P PU64 -dump header
 
 -include $(D_FILES))
 	
