--- a/qf_apps/qf_helloworldhw/GCC_Project/makefiles/Makefile_FreeRTOS
+++ b/qf_apps/qf_helloworldhw/GCC_Project/makefiles/Makefile_FreeRTOS
@@ -25,22 +25,19 @@ all:$(OBJS) $(OUTPUT_PATH)/port.o $(OUTPUT_PATH)/heap_4.o
 $(OUTPUT_PATH)/%.o:$(SRC_PATH)/%.c $(DEPEND_PATH)/%.d
 	@echo Compile: $<
 	$(CC) $< $(CFLAGS) $(DEPFLAGS) $(INCLUDE_DIRS) -o $@
-	$(CP) $(DEPEND_PATH)$(DIR_SEP)$*.Td $(DEPEND_PATH)$(DIR_SEP)$*.d
-	$(RM) $(DEPEND_PATH)$(DIR_SEP)$*.Td 
+	$(MV) $(DEPEND_PATH)$(DIR_SEP)$*.Td $(DEPEND_PATH)$(DIR_SEP)$*.d
 
 	
 $(OUTPUT_PATH)/port.o: $(SRC_PATH)/portable/GCC/ARM_CM4F_quicklogic_s3XX/port.c  $(DEPEND_PATH)/port.d
 	@echo Compile: $<
 	$(CC) $(SRC_PATH)/portable/GCC/ARM_CM4F_quicklogic_s3XX/port.c $(CFLAGS) $(DEPFLAGS_2) $(INCLUDE_DIRS) -o $@
-	$(CP) $(DEPEND_PATH)$(DIR_SEP)port.Td $(DEPEND_PATH)$(DIR_SEP)port.d
-	$(RM) $(DEPEND_PATH)$(DIR_SEP)port.Td
+	$(MV) $(DEPEND_PATH)$(DIR_SEP)port.Td $(DEPEND_PATH)$(DIR_SEP)port.d
 
 	
 $(OUTPUT_PATH)/heap_4.o: $(SRC_PATH)/portable/MemMang/heap_4.c $(DEPEND_PATH)/heap_4.d
 	@echo Compile: $<
 	$(CC) $(SRC_PATH)/portable/MemMang/heap_4.c $(CFLAGS) $(DEPFLAGS_3) $(INCLUDE_DIRS) -o $@
-	$(CP) $(DEPEND_PATH)$(DIR_SEP)heap_4.Td $(DEPEND_PATH)$(DIR_SEP)heap_4.d
-	$(RM) $(DEPEND_PATH)$(DIR_SEP)heap_4.Td
+	$(MV) $(DEPEND_PATH)$(DIR_SEP)heap_4.Td $(DEPEND_PATH)$(DIR_SEP)heap_4.d
 
 
 -include $(D_FILES)
