Updates to qf_helloworldsw: makefiles -- Align with helloworldhw, including handleing FreeRTOS dependencies correctly

--- a/qf_apps/qf_helloworldsw/GCC_Project/makefiles/Makefile_output
+++ b/qf_apps/qf_helloworldsw/GCC_Project/makefiles/Makefile_output
@@ -1,4 +1,4 @@
-#OUT_SRCS:=$(wildcard $(OUTPUT_PATH)/*.o )
+#OUT_OBJS:=$(wildcard $(OUTPUT_PATH)/*.o )
 
 all: $(OUTPUT_PATH)/*.o
 	@echo Linking ...
