--- a/qf_apps/qf_helloworldsw/GCC_Project/makefiles/Makefile_appdir
+++ b/qf_apps/qf_helloworldsw/GCC_Project/makefiles/Makefile_appdir
@@ -1,4 +1,6 @@
-
+#
+# SW sources
+#
 MAIN_SRCS:=$(wildcard $(MAIN_DIR)/*.c)
 
 filters=audio_pipeline_example.c h2d_protocol.c ql_hostTask.c ql_smart_remote_app.c
@@ -7,6 +9,7 @@ SRCS:=$(filter-out $(filters),$(notdir $(MAIN_SRCS)))
 
 OBJS:=$(addprefix $(OUTPUT_PATH)/,$(SRCS:.c=.o))
 SRC_PATH:= $(MAIN_DIR)
+
 
 include $(COMMON_STUB)
 
