--- a/qf_apps/qf_helloworldsw/GCC_Project/makefiles/Makefile_common
+++ b/qf_apps/qf_helloworldsw/GCC_Project/makefiles/Makefile_common
@@ -1,13 +1,13 @@
 # -*- mode: Makefile -*-
-# This is the common stub to be includeed in each make file
+# This is the common stub to be included in each make file
 
 D_FILES:=$(addprefix $(DEPEND_PATH)$(DIR_SEP),$(SRCS:.c=.d))
 O_FILES:=$(addprefix $(OUTPUT_PATH)$(DIR_SEP),$(SRCS:.c=.o))
+R_FILES:=$(addprefix $(MAIN_FPGA_RTL_DIR)$(DIR_SEP),$(FPGA_RTL_SRCS))
 
 DEPFLAGS = -MT $@ -MMD -MP -MF $(DEPEND_PATH)/$*.Td
 
-all: $(OBJS)
-
+all: $(OBJS) $(MAIN_FPGA_RTL_DIR)/$(FPGA_RTL_OBJ)
 
 #$(info QLFS SOURCE: ${SRCS})
 #$(info QLFS OBJS: ${OBJS})
@@ -19,6 +19,10 @@ $(OUTPUT_PATH)/%.o: $(SRC_PATH)/%.c $(DEPEND_PATH)/%.d
 	$(CC) $< $(CFLAGS) $(DEPFLAGS) $(INCLUDE_DIRS) -o $@
 	$(CP) $(DEPEND_PATH)$(DIR_SEP)$*.Td $(DEPEND_PATH)$(DIR_SEP)$*.d
 	$(RM) $(DEPEND_PATH)$(DIR_SEP)$*.Td 
+	touch $@
+	
+$(MAIN_FPGA_RTL_DIR)/$(FPGA_RTL_OBJ): $(R_FILES)
+	ql_symbiflow  -compile -src $(MAIN_FPGA_RTL_DIR) -d ql-eos-s3 -t $(RTL_TOP_MODULE) -v $(FPGA_RTL_SRCS) -p quickfeather.pcf -k PU64 -dump header
 
 -include $(D_FILES))
 	
@@ -31,6 +35,10 @@ clean:
 	@echo Cleaning ...
 ifneq (,${DELETEME})
 	-$(HIDE)$(RM) $(D_FILES)
-	-$(HIDE)$(RM) $(O_FILES)    
+	-$(HIDE)$(RM) $(O_FILES) 
+ifneq (,$(FPGA_RTL_OBJ))
+	-$(HIDE)$(RM) $(MAIN_FPGA_RTL_DIR)/$(FPGA_RTL_OBJ)
+endif
+	-$(HIDE)$(RMDIR) $(MAIN_FPGA_RTL_DIR)/build
 endif
 
