--- a/qf_apps/qf_bootloader/GCC_Project/makefiles/Makefile_output
+++ b/qf_apps/qf_bootloader/GCC_Project/makefiles/Makefile_output
@@ -2,12 +2,12 @@
 
 all: $(OUTPUT_PATH)/*.o
 	$(LD) $(OUTPUT_PATH)$(DIR_SEP)*.o $(LD_FLAGS_1) $(LIBS) $(LD_FLAGS_2)
-	$(ELF2BIN) $(ELF2BIN_OPTIONS) $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).out $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).bin
-	$(NM) $(OUTPUT_PATH)${DIR_SEP}$(OUTPUT_FILE).out > $(OUTPUT_PATH)${DIR_SEP}$(OUTPUT_FILE).sym.txt
+	$(ELF2BIN) $(ELF2BIN_OPTIONS) $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).elf $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).bin
+	$(NM) $(OUTPUT_PATH)${DIR_SEP}$(OUTPUT_FILE).elf > $(OUTPUT_PATH)${DIR_SEP}$(OUTPUT_FILE).sym.txt
 	
 clean:
 	$(RM) $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).bin
-	$(RM) $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).out
+	$(RM) $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).elf
 	$(RM) $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).map
 	$(RM) $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).sym.txt
     
