--- a/qf_apps/qf_advancedfpga/GCC_Project/makefiles/Makefile_output
+++ b/qf_apps/qf_advancedfpga/GCC_Project/makefiles/Makefile_output
@@ -4,13 +4,13 @@ all: $(OUTPUT_PATH)/*.o
 	@echo Linking ...
 	$(HIDE)$(LD) $(OUTPUT_PATH)$(DIR_SEP)*.o $(LD_FLAGS_1) $(LIBS) $(LD_FLAGS_2)
 	@echo Convert ELF to BIN
-	$(HIDE)$(ELF2BIN) $(ELF2BIN_OPTIONS) $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).out $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).bin
+	$(HIDE)$(ELF2BIN) $(ELF2BIN_OPTIONS) $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).elf $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).bin
 	@echo Create text symbol table.
-	$(HIDE)$(NM) $(OUTPUT_PATH)${DIR_SEP}$(OUTPUT_FILE).out > $(OUTPUT_PATH)${DIR_SEP}$(OUTPUT_FILE).sym.txt
+	$(HIDE)$(NM) $(OUTPUT_PATH)${DIR_SEP}$(OUTPUT_FILE).elf > $(OUTPUT_PATH)${DIR_SEP}$(OUTPUT_FILE).sym.txt
 	
 DELETEME=
 DELETEME+= $(wildcard $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).bin)
-DELETEME+= $(wildcard $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).out)
+DELETEME+= $(wildcard $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).elf)
 DELETEME+= $(wildcard $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).map)
 DELETEME+= $(wildcard $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).sym.txt)
 DELETEME := $(strip ${DELETEME})
