--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ dist: bionic
 language: C
 compiler: gcc
 
+before_install:
+  sudo add-apt-repository ppa:team-gcc-arm-embedded/ppa     
+  sudo apt-get update     
+  sudo apt-get install gcc-arm-embedded
+
 jobs:
   include:
     -name: "build"
