--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ language: C
 compiler: gcc
 
 before_install:
-  sudo add-apt-repository ppa:team-gcc-arm-embedded/ppa     
-  sudo apt-get update     
-  sudo apt-get install gcc-arm-embedded
+  - sudo add-apt-repository ppa:team-gcc-arm-embedded/ppa     
+  - sudo apt-get update     
+  - sudo apt-get install gcc-arm-embedded
 
 jobs:
   include:
