--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: C
 compiler: gcc
 
 before_install:
-  - sudo add-apt-repository ppa:team-gcc-arm-embedded/ppa     
+  - sudo add-apt-repository -y ppa:team-gcc-arm-embedded/ppa     
   - sudo apt-get update     
   - sudo apt-get install gcc-arm-embedded
 
