--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,15 @@ before_install:
   - sudo add-apt-repository -y ppa:team-gcc-arm-embedded/ppa     
   - sudo apt-get update     
   - sudo apt-get install gcc-arm-embedded
+  - export  INSTALL_DIR=~/symbiflow
+  - SRC=https://github.com/QuickLogic-Corp/quicklogic-fpga-toolchain/releases/download/v0.1.0/Symbiflow_v0.1.0.gz.run
+  - RUNFILE=$(basename $SRC)
+  - echo "retrive new file"
+  - wget $SRC
+  - bash $RUNFILE
+  - export PATH="$INSTALL_DIR/install/bin:$INSTALL_DIR/install/bin/python:$PATH"
+  - source "$INSTALL_DIR/conda/etc/profile.d/conda.sh"
+  - conda activate
 
 jobs:
   include:
