--- a/qf_apps/qf_mqttsn_ai_app/GCC_Project/Makefile
+++ b/qf_apps/qf_mqttsn_ai_app/GCC_Project/Makefile
@@ -13,7 +13,7 @@ all: _makedirs_ external_srcs appdir
 	@echo Copy output files ...
 	${HIDE}$(CP) $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).bin $(OUTPUT_PATH)$(DIR_SEP)bin
 	${HIDE}$(CP) $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).map $(OUTPUT_PATH)$(DIR_SEP)bin
-	${HIDE}$(CP) $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).out $(OUTPUT_PATH)$(DIR_SEP)bin
+	${HIDE}$(CP) $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).elf $(OUTPUT_PATH)$(DIR_SEP)bin
 
 _makedirs_:
 	@-$(MKDIR) $(DEPEND_PATH)
