clean-up unneeded files, move mCube accelerometer drivers to Libraries folder

--- a/qf_apps/qf_mqttsn_ai_app/GCC_Project/makefiles/Makefile_Libraries
+++ b/qf_apps/qf_mqttsn_ai_app/GCC_Project/makefiles/Makefile_Libraries
@@ -1,6 +1,8 @@
 # -*- mode: Makefile -*-
 
-all:  POWER SYSFLASH UTILS FPGA CLI MQTTSN MQTTSN_SML QLFS FREERTOS_FAT FREERTOS_FAT_QL FREERTOS_FAT_COMMON UTILS DATABLOCKMANAGER
+all:  POWER SYSFLASH UTILS FPGA CLI MQTTSN MQTTSN_SML QLFS FREERTOS_FAT \
+      FREERTOS_FAT_QL FREERTOS_FAT_COMMON UTILS DATABLOCKMANAGER \
+      SENSOR_DRIVERS
 
 .PHONY: SENSOR_FRAMEWORK
 SENSOR_FRAMEWORK:
@@ -9,8 +11,8 @@ SENSOR_FRAMEWORK:
 
 .PHONY: SENSOR_DRIVERS
 SENSOR_DRIVERS:
-	make -f makefiles/Makefile_FFE
-	make -f makefiles/Makefile_Hybrid
+#	make -f makefiles/Makefile_FFE
+#	make -f makefiles/Makefile_Hybrid
 	make -f makefiles/Makefile_M4
 
 
