--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,5 @@ jobs:
   include:
     -name: "build"
     script:
-      bash ci/makeall.csh
+      -more $INSTALL_DIR/install/bin/python/qlfasm
+      -bash ci/makeall.csh
