--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,14 @@ before_install:
   - export PATH="$INSTALL_DIR/install/bin:$INSTALL_DIR/install/bin/python:$PATH"
   - source "$INSTALL_DIR/conda/etc/profile.d/conda.sh"
   - conda activate
+  - ls $INSTALL_DIR
+  - ls $INSTALL_DIR/install
+  - ls $INSTALL_DIR/install/bin
+  - ls $INSTALL_DIR/install/bin/python
   - head $INSTALL_DIR/install/bin/python/qlfasm
 
 jobs:
   include:
     -name: "build"
     script:
-     bash ci/makeall.csh
+
