projects updated for new gateware folder structure

--- a/qf_apps/qf_mqttsn_ai_app/GCC_Project/Makefile
+++ b/qf_apps/qf_mqttsn_ai_app/GCC_Project/Makefile
@@ -6,7 +6,7 @@ include config.mk
 
 VPATH:=$(OUTPUT_PATH)
 
-all: _makedirs_ external_srcs appdir gateware s3gw_drivers
+all: _makedirs_ gateware external_srcs appdir s3gw_drivers
 	-${HIDE}$(RM) $(OUTPUT_PATH)$(DIR_SEP)bin$(DIR_SEP)$(OUTPUT_FILE).*
 	make -f makefiles/Makefile_output
 	-${HIDE}$(MKDIR) $(OUTPUT_PATH)$(DIR_SEP)bin
