--- a/qf_apps/qf_mqttsn_ai_app/GCC_Project/makefiles/Makefile_common
+++ b/qf_apps/qf_mqttsn_ai_app/GCC_Project/makefiles/Makefile_common
@@ -6,7 +6,7 @@ O_FILES:=$(addprefix $(OUTPUT_PATH)$(DIR_SEP),$(SRCS:.c=.o))
 
 DEPFLAGS = -MT $@ -MMD -MP -MF $(DEPEND_PATH)/$*.Td
 
-all: $(OBJS)
+all: $(OBJS) $(MAIN_FPGA_SRC_DIR)/$(FPGA_RTL_OBJ)
 
 
 $(info QLFS SOURCE: ${SRCS})
@@ -19,6 +19,14 @@ $(OUTPUT_PATH)/%.o: $(SRC_PATH)/%.c $(DEPEND_PATH)/%.d
 	$(CC) $< $(CFLAGS) $(DEPFLAGS) $(INCLUDE_DIRS) -o $@
 	$(CP) $(DEPEND_PATH)$(DIR_SEP)$*.Td $(DEPEND_PATH)$(DIR_SEP)$*.d
 	$(RM) $(DEPEND_PATH)$(DIR_SEP)$*.Td 
+
+$(MAIN_FPGA_SRC_DIR)/$(FPGA_RTL_OBJ): $(R_FILES)
+	time ql_symbiflow  -compile -src $(MAIN_FPGA_RTL_DIR) -d ql-eos-s3 -t $(RTL_TOP_MODULE) -v $(FPGA_RTL_SRCS) -p quickfeather.pcf -P PU64 -dump header
+	$(MV) $(MAIN_FPGA_RTL_DIR)/$(RTL_TOP_MODULE)_bit.h $(MAIN_FPGA_SRC_DIR)/$(RTL_TOP_MODULE)_bit.c
+	@echo "#include <stdint.h>" | cat - $(MAIN_FPGA_SRC_DIR)/$(RTL_TOP_MODULE)_bit.c > /tmp/out && mv /tmp/out $(MAIN_FPGA_SRC_DIR)/$(RTL_TOP_MODULE)_bit.c
+	@echo "" >> $(MAIN_FPGA_SRC_DIR)/$(RTL_TOP_MODULE)_bit.c
+	@echo "// length of axFPGABitStream array in bytes" >> $(MAIN_FPGA_SRC_DIR)/$(RTL_TOP_MODULE)_bit.c
+	@echo "const int axFPGABitStream_length = sizeof(axFPGABitStream);" >> $(MAIN_FPGA_SRC_DIR)/$(RTL_TOP_MODULE)_bit.c
 
 -include $(D_FILES))
 	
