--- a/qf_apps/qf_mqttsn_ai_app/GCC_Project/makefiles/Makefile_gateware
+++ b/qf_apps/qf_mqttsn_ai_app/GCC_Project/makefiles/Makefile_gateware
@@ -1,7 +1,7 @@
 ####### SW Files (routines to access FPGA IP) ##########
 $(info MAIN_FPGA_SRC_DIR=$(MAIN_FPGA_SRC_DIR))
 MAIN_FPGA_SRCS:=$(wildcard $(MAIN_FPGA_SRC_DIR)/*.c)
-filters=
+filters=fpga.c
 SRCS:=$(filter-out $(filters),$(notdir $(MAIN_FPGA_SRCS)))
 OBJS:=$(addprefix $(OUTPUT_PATH)/,$(SRCS:.c=.o))
 SRC_PATH:= $(MAIN_FPGA_SRC_DIR)
@@ -11,8 +11,11 @@ $(info $(SRCS))
 FPGA_ALL_RTL_SRCS:=$(wildcard $(MAIN_FPGA_RTL_DIR)/*.v)
 filters=
 FPGA_RTL_SRCS:=$(filter-out $(filters),$(notdir $(FPGA_ALL_RTL_SRCS)))
+$(info $(FPGA_RTL_SRCS) $(MAIN_FPGA_RTL_DIR))
 ifneq ($(FPGA_RTL_SRCS),)
-FPGA_RTL_OBJ:=$(RTL_TOP_MODULE)_bit.h
+FPGA_RTL_OBJ:=$(RTL_TOP_MODULE)_bit.c
+OBJS:=$(OBJS) $(addprefix $(OUTPUT_PATH)/,$(RTL_TOP_MODULE)_bit.o)
+SRCS:=$(SRCS) $(RTL_TOP_MODULE)_bit.c
 endif
 
 
