--- a/qf_testapps/qf_baremetal/GCC_Project/makefiles/Makefile_s3gw_drivers
+++ b/qf_testapps/qf_baremetal/GCC_Project/makefiles/Makefile_s3gw_drivers
@@ -1,6 +1,8 @@
 S3GW_DRIVERS_SRCS:=$(wildcard $(S3GW_DRIVERS_DIR)/*.c )
+S3GW_DRIVERS_SRCS:=$(S3GW_DRIVERS_DIR)/eoss3_hal_fpga_usbserial.c
 
-filters=eoss3_hal_audio.c eoss3_hal_ffe.c eoss3_hal_fpga_adc.c eoss3_hal_i2s_master_assp.c 
+filters=
+#  eoss3_hal_audio.c eoss3_hal_ffe.c eoss3_hal_fpga_adc.c eoss3_hal_i2s_master_assp.c 
 #  eoss3_hal_fpga_clk_sync.c \
 #        eoss3_hal_fpga_gpio.c  eoss3_hal_fpga_sdma.c eoss3_hal_fpga_uart.c \
 #        eoss3_hal_i2s.c eoss3_hal_i2s_slave_assp.c
