--- a/qf_apps/qf_helloworldsw/GCC_Project/makefiles/Makefile_common
+++ b/qf_apps/qf_helloworldsw/GCC_Project/makefiles/Makefile_common
@@ -21,8 +21,9 @@ $(OUTPUT_PATH)/%.o: $(SRC_PATH)/%.c $(DEPEND_PATH)/%.d
 	$(RM) $(DEPEND_PATH)$(DIR_SEP)$*.Td 
 	touch $@
 	
+SYMBIFLOW_WARN_PATTERN="^Warning [0-9]\{1,\}:.*no timing specification"
 $(MAIN_FPGA_RTL_DIR)/$(FPGA_RTL_OBJ): $(R_FILES)
-	ql_symbiflow  -compile -src $(MAIN_FPGA_RTL_DIR) -d ql-eos-s3 -t $(RTL_TOP_MODULE) -v $(FPGA_RTL_SRCS) -p quickfeather.pcf -k PU64 -dump header
+	ql_symbiflow  -compile -src $(MAIN_FPGA_RTL_DIR) -d ql-eos-s3 -t $(RTL_TOP_MODULE) -v $(FPGA_RTL_SRCS) -p quickfeather.pcf -k PU64 -dump header | grep -v $(SYMBIFLOW_WARN_PATTERN)
 
 -include $(D_FILES))
 	
