qf_mqttsn_ai_app gcc project updated to add audio

--- a/qf_apps/qf_mqttsn_ai_app/GCC_Project/makefiles/Makefile_s3gw_drivers
+++ b/qf_apps/qf_mqttsn_ai_app/GCC_Project/makefiles/Makefile_s3gw_drivers
@@ -1,7 +1,8 @@
 #S3GW_DRIVERS_SRCS:=$(wildcard $(S3GW_DRIVERS_DIR)/*.c )
 S3GW_DRIVERS_SRCS:=$(S3GW_DRIVERS_DIR)/eoss3_hal_fpga_ad7476.c \
                    $(S3GW_DRIVERS_DIR)/eoss3_hal_fpga_sdma.c \
-                   $(S3GW_DRIVERS_DIR)/eoss3_hal_fpga_uart.c
+                   $(S3GW_DRIVERS_DIR)/eoss3_hal_fpga_uart.c \
+                   $(S3GW_DRIVERS_DIR)/eoss3_hal_fpga_usbserial.c
 
 filters=
 #  eoss3_hal_audio.c eoss3_hal_ffe.c eoss3_hal_i2s_master_assp.c \
