--- a/qf_apps/qf_helloworldsw/GCC_Project/makefiles/Makefile_common
+++ b/qf_apps/qf_helloworldsw/GCC_Project/makefiles/Makefile_common
@@ -5,7 +5,7 @@ D_FILES:=$(addprefix $(DEPEND_PATH)$(DIR_SEP),$(SRCS:.c=.d))
 O_FILES:=$(addprefix $(OUTPUT_PATH)$(DIR_SEP),$(SRCS:.c=.o))
 R_FILES:=$(addprefix $(MAIN_FPGA_RTL_DIR)$(DIR_SEP),$(FPGA_RTL_SRCS))
 
-DEPFLAGS = -MT $@ -MMD -MP -MF $(DEPEND_PATH)/$*.Td
+DEPFLAGS = -MT $@ -MMD -MP -MF $(DEPEND_PATH)/$*.d
 
 all: $(OBJS) # $(MAIN_FPGA_RTL_DIR)/$(FPGA_RTL_OBJ)
 
@@ -17,9 +17,6 @@ all: $(OBJS) # $(MAIN_FPGA_RTL_DIR)/$(FPGA_RTL_OBJ)
 %.o:%.c
 $(OUTPUT_PATH)/%.o: $(SRC_PATH)/%.c $(DEPEND_PATH)/%.d
 	$(CC) $< $(CFLAGS) $(DEPFLAGS) $(INCLUDE_DIRS) -o $@
-	$(CP) $(DEPEND_PATH)$(DIR_SEP)$*.Td $(DEPEND_PATH)$(DIR_SEP)$*.d
-	$(RM) $(DEPEND_PATH)$(DIR_SEP)$*.Td 
-	touch $@
 	
 SYMBIFLOW_WARN_PATTERN="^Warning [0-9]\{1,\}:.*no timing specification"
 $(MAIN_FPGA_RTL_DIR)/$(FPGA_RTL_OBJ): $(R_FILES)
