--- a/qf_apps/qf_loadflash/GCC_Project/makefiles/Makefile_FreeRTOS
+++ b/qf_apps/qf_loadflash/GCC_Project/makefiles/Makefile_FreeRTOS
@@ -11,9 +11,9 @@ D_FILES += $(DEPEND_PATH)$(DIR_SEP)port.d $(DEPEND_PATH)$(DIR_SEP)heap_4.d
 O_FILES += $(OUTPUT_PATH)$(DIR_SEP)port.o $(OUTPUT_PATH)$(DIR_SEP)heap_4.o
 
 
-DEPFLAGS = -MT $@ -MMD -MP -MF $(DEPEND_PATH)/$*.Td
-DEPFLAGS_2 = -MT $@ -MMD -MP -MF $(DEPEND_PATH)/port.Td
-DEPFLAGS_3 = -MT $@ -MMD -MP -MF $(DEPEND_PATH)/heap_4.Td
+DEPFLAGS = -MT $@ -MMD -MP -MF $(DEPEND_PATH)/$*.d
+DEPFLAGS_2 = -MT $@ -MMD -MP -MF $(DEPEND_PATH)/port.d
+DEPFLAGS_3 = -MT $@ -MMD -MP -MF $(DEPEND_PATH)/heap_4.d
 
 POSTCOMPILE = @$(CP) $(DEPEND_PATH)/$*.Td $(DEPEND_PATH)/$*.d
 POSTCOMPILE_4 = del $(DEPEND_PATH)/$*.Td 
@@ -25,25 +25,16 @@ all:$(OBJS) $(OUTPUT_PATH)/port.o $(OUTPUT_PATH)/heap_4.o
 $(OUTPUT_PATH)/%.o:$(SRC_PATH)/%.c $(DEPEND_PATH)/%.d
 	@echo Compile: $<
 	$(CC) $< $(CFLAGS) $(DEPFLAGS) $(INCLUDE_DIRS) -o $@
-	$(CP) $(DEPEND_PATH)$(DIR_SEP)$*.Td $(DEPEND_PATH)$(DIR_SEP)$*.d
-	$(RM) $(DEPEND_PATH)$(DIR_SEP)$*.Td 
-	touch $@
 
 	
 $(OUTPUT_PATH)/port.o: $(SRC_PATH)/portable/GCC/ARM_CM4F_quicklogic_s3XX/port.c  $(DEPEND_PATH)/port.d
 	@echo Compile: $<
 	$(CC) $(SRC_PATH)/portable/GCC/ARM_CM4F_quicklogic_s3XX/port.c $(CFLAGS) $(DEPFLAGS_2) $(INCLUDE_DIRS) -o $@
-	$(CP) $(DEPEND_PATH)$(DIR_SEP)port.Td $(DEPEND_PATH)$(DIR_SEP)port.d
-	$(RM) $(DEPEND_PATH)$(DIR_SEP)port.Td
-	touch $@
 
 	
 $(OUTPUT_PATH)/heap_4.o: $(SRC_PATH)/portable/MemMang/heap_4.c $(DEPEND_PATH)/heap_4.d
 	@echo Compile: $<
 	$(CC) $(SRC_PATH)/portable/MemMang/heap_4.c $(CFLAGS) $(DEPFLAGS_3) $(INCLUDE_DIRS) -o $@
-	$(CP) $(DEPEND_PATH)$(DIR_SEP)heap_4.Td $(DEPEND_PATH)$(DIR_SEP)heap_4.d
-	$(RM) $(DEPEND_PATH)$(DIR_SEP)heap_4.Td
-	touch $@
 
 
 -include $(D_FILES)
