--- a/qf_vr_apps/qf_2micvr_app/GCC_Project/Makefile
+++ b/qf_vr_apps/qf_2micvr_app/GCC_Project/Makefile
@@ -12,7 +12,7 @@ all: _makedirs_ external_srcs Appdir
 	@echo Copy output files ...
 	${HIDE}$(CP) $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).bin $(OUTPUT_PATH)$(DIR_SEP)bin
 	${HIDE}$(CP) $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).map $(OUTPUT_PATH)$(DIR_SEP)bin
-	${HIDE}$(CP) $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).out $(OUTPUT_PATH)$(DIR_SEP)bin
+	${HIDE}$(CP) $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).elf $(OUTPUT_PATH)$(DIR_SEP)bin
 
 
 .PHONY: _makedirs_
