--- a/qf_vr_apps/Makefile
+++ b/qf_vr_apps/Makefile
@@ -1,4 +1,4 @@
-all:	1micvr_app
+all:	1micvr_app 2micvr_app
 
 .PHONY:qf_1micvr_app
 1micvr_app:
@@ -6,6 +6,14 @@ all:	1micvr_app
 
 CLEAN_TARGET += 1micvr_app
 1micvr_app_clean:
+	cd qf_$(subst _clean,,$@)/GCC_Project && make clean
+
+.PHONY:qf_2micvr_app
+2micvr_app:
+	cd qf_$@/GCC_Project && make
+
+CLEAN_TARGET += 2micvr_app
+2micvr_app_clean:
 	cd qf_$(subst _clean,,$@)/GCC_Project && make clean
 
 $(info CLEAN_TARGET $(CLEAN_TARGET))
