Added bootloader_uart project, updated Makefile build system for bootloader and bootloader_uart projects

--- a/qf_apps/makefile
+++ b/qf_apps/makefile
@@ -3,7 +3,8 @@ BINS = qf_helloworldsw/GCC_Project/output/bin/qf_helloworldsw.bin\
 	qf_advancedfpga/GCC_Project/output/bin/qf_advancedfpga.bin\
 	qf_bootloader/GCC_Project/output/bin/qf_bootloader.bin\
 	qf_loadflash/GCC_Project/output/bin/qf_loadflash.bin\
-	qf_mqttsn_ai_app/GCC_Project/output/bin/qf_mqttsn_ai_app.bin
+	qf_mqttsn_ai_app/GCC_Project/output/bin/qf_mqttsn_ai_app.bin\
+	qf_bootloader_uart/GCC_Project/output/bin/qf_bootloader_uart.bin
 
 MFGBINS = qf_bootloader/GCC_Project/output/bin/qf_bootloader.bin\
 		qf_loadflash/GCC_Project/output/bin/qf_loadflash.bin\
@@ -15,6 +16,8 @@ clean:
 	cd qf_helloworldhw/GCC_Project/ && make clean
 	cd qf_advancedfpga/GCC_Project/ && make clean
 	cd qf_bootloader/GCC_Project/ && make clean
+	cd qf_loadflash/GCC_Project/ && make clean
+	cd qf_bootloader_uart/GCC_Project/ && make clean
 
 
 
@@ -34,9 +37,12 @@ qf_advancedfpga/GCC_Project/output/bin/qf_advancedfpga.bin:
 
 qf_bootloader/GCC_Project/output/bin/qf_bootloader.bin:
 	cd qf_bootloader/GCC_Project/ && make
-	
+
 qf_loadflash/GCC_Project/output/bin/qf_loadflash.bin:
 	cd qf_loadflash/GCC_Project/ && make
+
+qf_bootloader_uart/GCC_Project/output/bin/qf_bootloader_uart.bin:
+	cd qf_bootloader_uart/GCC_Project/ && make
 
 qf_mqttsn_ai_app/GCC_Project/output/bin/qf_mqttsn_ai_app.bin:
 	cd qf_mqttsn_ai_app/GCC_Project/ && make
