--- a/qf_apps/qf_bootloader/GCC_Project/makefiles/Makefile_Startup
+++ b/qf_apps/qf_bootloader/GCC_Project/makefiles/Makefile_Startup
@@ -5,7 +5,7 @@ SRC_PATH:= $(PROJ_ROOT)/HAL/startup
 D_FILES:=$(addprefix $(DEPEND_PATH)$(DIR_SEP),$(SRCS:.c=.d))
 O_FILES:=$(addprefix $(OUTPUT_PATH)$(DIR_SEP),$(SRCS:.c=.o))
 
-DEPFLAGS = -MT $@ -MMD -MP -MF $(DEPEND_PATH)/$*.Td
+DEPFLAGS = -MT $@ -MMD -MP -MF $(DEPEND_PATH)/$*.d
 
 
 all: $(OBJS)
@@ -14,9 +14,6 @@ all: $(OBJS)
 $(OUTPUT_PATH)/%.o:$(SRC_PATH)/%.c $(DEPEND_PATH)/%.d
 	@echo Compile: $<
 	$(HIDE)$(CC) $< $(CFLAGS) $(DEPFLAGS) $(INCLUDE_DIRS) -o $@
-	$(HIDE)$(CP) $(DEPEND_PATH)$(DIR_SEP)$*.Td $(DEPEND_PATH)$(DIR_SEP)$*.d
-	-$(HIDE)$(RM) $(DEPEND_PATH)$(DIR_SEP)$*.Td
-	touch $@
     
 -include $(D_FILES))
 
