Added qf_loadflash_uart project cloned from qf_loadflash

--- a/qf_apps/makefile
+++ b/qf_apps/makefile
@@ -4,7 +4,8 @@ BINS = qf_helloworldsw/GCC_Project/output/bin/qf_helloworldsw.bin\
 	qf_bootloader/GCC_Project/output/bin/qf_bootloader.bin\
 	qf_loadflash/GCC_Project/output/bin/qf_loadflash.bin\
 	qf_mqttsn_ai_app/GCC_Project/output/bin/qf_mqttsn_ai_app.bin\
-	qf_bootloader_uart/GCC_Project/output/bin/qf_bootloader_uart.bin
+	qf_bootloader_uart/GCC_Project/output/bin/qf_bootloader_uart.bin\
+	qf_loadflash_uart/GCC_Project/output/bin/qf_loadflash_uart.bin
 
 MFGBINS = qf_bootloader/GCC_Project/output/bin/qf_bootloader.bin\
 		qf_loadflash/GCC_Project/output/bin/qf_loadflash.bin\
@@ -18,6 +19,7 @@ clean:
 	cd qf_bootloader/GCC_Project/ && make clean
 	cd qf_loadflash/GCC_Project/ && make clean
 	cd qf_bootloader_uart/GCC_Project/ && make clean
+	cd qf_loadflash_uart/GCC_Project/ && make clean
 
 
 
@@ -43,6 +45,9 @@ qf_loadflash/GCC_Project/output/bin/qf_loadflash.bin:
 
 qf_bootloader_uart/GCC_Project/output/bin/qf_bootloader_uart.bin:
 	cd qf_bootloader_uart/GCC_Project/ && make
+
+qf_loadflash_uart/GCC_Project/output/bin/qf_loadflash_uart.bin:
+	cd qf_loadflash_uart/GCC_Project/ && make
 
 qf_mqttsn_ai_app/GCC_Project/output/bin/qf_mqttsn_ai_app.bin:
 	cd qf_mqttsn_ai_app/GCC_Project/ && make
