--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "s3-gateware"]
 	path = s3-gateware
 	url = https://github.com/QuickLogic-Corp/s3-gateware
+[submodule "qorc-example-apps"]
+	path = qorc-example-apps
+	url = https://github.com/QuickLogic-Corp/qorc-example-apps.git
