added submodule qorc-example-apps and pm2dot5aqi app (#61)
Co-authored-by: murthyvedula <66380686+murthyvedula@users.noreply.github.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "qorc-testapps"]
 	path = qorc-testapps
 	url = https://github.com/QuickLogic-Corp/qorc-testapps
+[submodule "qorc-example-apps"]
+	path = qorc-example-apps
+	url = https://github.com/QuickLogic-Corp/qorc-example-apps.git
