add qf_gwtestharness build for ci

--- a/qf_apps/makefile
+++ b/qf_apps/makefile
@@ -6,7 +6,8 @@ BINS = qf_helloworldsw/GCC_Project/output/bin/qf_helloworldsw.bin\
 	qf_mqttsn_ai_app/GCC_Project/output/bin/qf_mqttsn_ai_app.bin\
 	qf_bootloader_uart/GCC_Project/output/bin/qf_bootloader_uart.bin\
 	qf_loadflash_uart/GCC_Project/output/bin/qf_loadflash_uart.bin\
-	qf_fpgauart_app/GCC_Project/output/bin/qf_fpgauart_app.bin
+	qf_fpgauart_app/GCC_Project/output/bin/qf_fpgauart_app.bin\
+	qf_gwtestharness/GCC_Project/output/bin/qf_gwtestharness.bin
 
 MFGBINS = qf_bootloader/GCC_Project/output/bin/qf_bootloader.bin\
 		qf_loadflash/GCC_Project/output/bin/qf_loadflash.bin\
@@ -56,3 +57,6 @@ qf_mqttsn_ai_app/GCC_Project/output/bin/qf_mqttsn_ai_app.bin:
 
 qf_fpgauart_app/GCC_Project/output/bin/qf_fpgauart_app.bin:
 	cd qf_fpgauart_app/GCC_Project/ && make
+
+qf_gwtestharness/GCC_Project/output/bin/qf_gwtestharness.bin:
+	cd qf_gwtestharness/GCC_Project/ && make
