--- a/qf_vr_apps/qf_host_app/GCC_Project/Makefile
+++ b/qf_vr_apps/qf_host_app/GCC_Project/Makefile
@@ -6,7 +6,7 @@ include config.mk
 
 VPATH:=$(OUTPUT_PATH)
 
-all: _makedirs_ external_srcs appdir
+all: _makedirs_ external_srcs appdir gateware s3gw_drivers
 	-${HIDE}$(RM) $(OUTPUT_PATH)$(DIR_SEP)bin$(DIR_SEP)$(OUTPUT_FILE).*
 	make -f makefiles/Makefile_output
 	@echo Copy output files ...
@@ -111,6 +111,22 @@ clean_Control:
 	make -f makefiles/Makefile_Control clean
 
 CLEAN_TARGET += Control
+
+.PHONY:s3gw_drivers
+s3gw_drivers:
+	make -f makefiles/Makefile_s3gw_drivers
+clean_s3gw_drivers:
+	make -f makefiles/Makefile_s3gw_drivers clean
+
+CLEAN_TARGET += s3gw_drivers
+
+.PHONY:gateware
+gateware:
+	make -f makefiles/Makefile_gateware
+clean_gateware:
+	make -f makefiles/Makefile_gateware clean
+
+CLEAN_TARGET += s3gw_drivers
 
 DELETEME=
 DELETEME += $(wildcard $(OUTPUT_PATH)$(DIR_SEP)bin$(DIR_SEP)$(OUTPUT_FILE).*)
