--- a/qf_vr_apps/qf_vr_raw_app/GCC_Project/makefiles/Makefile_quickfeather_BOARD
+++ b/qf_vr_apps/qf_vr_raw_app/GCC_Project/makefiles/Makefile_quickfeather_BOARD
@@ -1,7 +1,7 @@
 
 QUICKFEATHER_SRCS:=$(wildcard $(QUICKFEATHER_DIR)/*.c)
 
-filters=
+filters=qf_hardwaresetup.c
 
 SRCS:=$(filter-out $(filters),$(notdir $(QUICKFEATHER_SRCS)))
 OBJS:=$(addprefix $(OUTPUT_PATH)/,$(SRCS:.c=.o))
