--- a/qf_vr_apps/qf_host_app/GCC_Project/makefiles/Makefile_Libraries
+++ b/qf_vr_apps/qf_host_app/GCC_Project/makefiles/Makefile_Libraries
@@ -53,4 +53,5 @@ clean:
 	make -f makefiles/Makefile_cli clean
 	make -f makefiles/Makefile_QLSPI clean
 	make -f makefiles/Makefile_FPGA clean
+	make -f makefiles/Makefile_D2HProtocol clean
 
