Added README for qf_host_app, updated README for qf_vr_raw_app

--- a/qf_vr_apps/qf_vr_raw_app/GCC_Project/Makefile
+++ b/qf_vr_apps/qf_vr_raw_app/GCC_Project/Makefile
@@ -66,6 +66,14 @@ clean_BSP:
 
 CLEAN_TARGET += BSP
 
+.PHONY: AMAZON
+AMAZON:
+	make -f makefiles/Makefile_Amazon
+clean_AMAZON:
+	make -f makefiles/Makefile_Amazon clean
+
+CLEAN_TARGET += AMAZON
+
 .PHONY:DSPC
 DSPC:
 	make -f makefiles/Makefile_DSPC
