--- a/qf_vr_apps/qf_vr_raw_app/GCC_Project/makefiles/Makefile_Libraries
+++ b/qf_vr_apps/qf_vr_raw_app/GCC_Project/makefiles/Makefile_Libraries
@@ -1,6 +1,6 @@
 # -*- mode: Makefile -*-
 
-all: POWER CMSIS UTILS DATABLOCKMANAGER D2HPROTOCOL AUDIO AMAZON
+all: POWER CMSIS UTILS DATABLOCKMANAGER D2HPROTOCOL AUDIO
 
 
 .PHONY: POWER
@@ -29,10 +29,6 @@ D2HPROTOCOL:
 AUDIO:
 	make -f makefiles/Makefile_Audio
 
-.PHONY: AMAZON
-AMAZON:
-	make -f makefiles/Makefile_Amazon
-
 clean:
 	make -f makefiles/Makefile_Power clean
 	make -f makefiles/Makefile_Utils clean
@@ -42,5 +38,4 @@ clean:
 	make -f makefiles/Makefile_DatablockManager clean
 	make -f makefiles/Makefile_D2HProtocol clean
 	make -f makefiles/Makefile_Audio clean
-	make -f makefiles/Makefile_Amazon clean
 
