Simplify Dockerfile, clarify documentation in comments.

--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -1,5 +1,5 @@
 ARG PARENT_IMAGE="symbiflow-ql:latest"
-FROM ${PARENT_IMAGE} as base
+FROM ${PARENT_IMAGE}
 
 WORKDIR /opt
 
@@ -8,10 +8,6 @@ RUN wget https://developer.arm.com/-/media/Files/downloads/gnu-rm/9-2020q2/gcc-a
     rm gcc-arm-none-eabi-9-2020-q2-update-x86_64-linux.tar.bz2
 
 ENV PATH=/opt/gcc-arm-none-eabi-9-2020-q2-update-x86_64-linux:$PATH
-
-FROM base as release-candidate
-
-FROM release-candidate as qorc-sdk
 
 # Below are some example commands to build and run a docker container.
 # From within the dockerfiles directory in a terminal window type:
@@ -24,8 +20,11 @@ FROM release-candidate as qorc-sdk
 # The above will execute bash within the running container.  Any
 # tools called thru bash will run within the container.
 #
-# You can run the container with an optional command, which it 
-# passes to bash.  For instance to run 'ls' in the container:
+# This container image intentionally does not add a user or entrypoint.
+# This allows easy use of this container as a parent image for adapting
+# it to specific needs.  An example that adds a user and entrypoint is 
+# available in the Dockerfile.user file in this directory.
 #
-# docker run --rm -v $(pwd):/root qorc-sdk ls
-#
+# Another example, with a prebuilt ready-to-run Docker container package 
+# built through a github actions workflow is here:
+# https://github.com/Thirsty2/qorc-sdk-user
