Generic sensor code to ease sensor data acquisition, added new MQTT-SN topic sensiml/live/sensor/data

--- a/qf_apps/qf_mqttsn_ai_app/GCC_Project/Makefile
+++ b/qf_apps/qf_mqttsn_ai_app/GCC_Project/Makefile
@@ -25,7 +25,7 @@ _makedirs_:
 
 .PHONY: external_srcs
 external_srcs: Startup HAL FreeRTOS Libraries BSP DatablockProcessor GENERATED \
-               ADC SENSOR_AD7476 SENSOR_AUDIO
+               ADC SENSOR_AD7476 SENSOR_AUDIO SENSOR_SSSS
 	@echo "External sources built"
 
 .PHONY: appdir
@@ -139,6 +139,13 @@ clean_SENSOR_AUDIO:
 
 CLEAN_TARGET += SENSOR_AUDIO
 
+.PHONY:SENSOR_SSSS
+SENSOR_SSSS:
+	make -f makefiles/Makefile_sensor_ssss
+clean_SENSOR_SSSS:
+	make -f makefiles/Makefile_sensor_ssss clean
+
+CLEAN_TARGET += SENSOR_SSSS
 DELETEME=
 DELETEME += $(wildcard $(OUTPUT_PATH)$(DIR_SEP)bin$(DIR_SEP)$(OUTPUT_FILE).*)
 DELETEME += $(wildcard $(OUTPUT_PATH)$(DIR_SEP)*.o)
