Added makefiles for building Opus from source. Added opus stream decoding using opus_demo.exe and convert to wav file.

--- a/qf_vr_apps/qf_vr_opus_app/GCC_Project/makefiles/Makefile_Libraries
+++ b/qf_vr_apps/qf_vr_opus_app/GCC_Project/makefiles/Makefile_Libraries
@@ -1,6 +1,6 @@
 # -*- mode: Makefile -*-
 
-all: POWER CMSIS UTILS DATABLOCKMANAGER D2HPROTOCOL AUDIO AMAZON
+all: POWER CMSIS UTILS DATABLOCKMANAGER D2HPROTOCOL AUDIO AMAZON LIBOPUS CELT OPUSSRC
 
 
 .PHONY: POWER
@@ -33,6 +33,19 @@ AUDIO:
 AMAZON:
 	make -f makefiles/Makefile_Amazon
 
+.PHONY: LIBOPUS
+LIBOPUS:
+	make -f makefiles/Makefile_libopus
+
+.PHONY: CELT
+CELT:
+	make -f makefiles/Makefile_celt
+
+.PHONY: OPUSSRC
+OPUSSRC:
+	make -f makefiles/Makefile_opus
+
+
 clean:
 	make -f makefiles/Makefile_Power clean
 	make -f makefiles/Makefile_Utils clean
@@ -44,3 +57,6 @@ clean:
 	make -f makefiles/Makefile_Audio clean
 	make -f makefiles/Makefile_Amazon clean
 
+	make -f makefiles/Makefile_libopus clean
+	make -f makefiles/Makefile_celt clean
+	make -f makefiles/Makefile_opus clean
