Added onboard accelerometer sensor data to the SensiML simple stream interface app

--- a/qf_apps/qf_ssi_ai_app/GCC_Project/makefiles/Makefile_Libraries
+++ b/qf_apps/qf_ssi_ai_app/GCC_Project/makefiles/Makefile_Libraries
@@ -1,6 +1,6 @@
 # -*- mode: Makefile -*-
 
-all:  POWER SYSFLASH UTILS FPGA CLI DATABLOCKMANAGER
+all:  POWER SYSFLASH UTILS FPGA CLI DATABLOCKMANAGER SENSOR_DRIVERS
 
 .PHONY: SENSOR_FRAMEWORK
 SENSOR_FRAMEWORK:
@@ -9,8 +9,8 @@ SENSOR_FRAMEWORK:
 
 .PHONY: SENSOR_DRIVERS
 SENSOR_DRIVERS:
-	make -f makefiles/Makefile_FFE
-	make -f makefiles/Makefile_Hybrid
+#	make -f makefiles/Makefile_FFE
+#	make -f makefiles/Makefile_Hybrid
 	make -f makefiles/Makefile_M4
 
 
