qf_ssi_ai_app - Using C++ interface for generic sensor code. Added C++ module onboard accelerometer

--- a/qf_apps/qf_ssi_ai_app/GCC_Project/makefiles/Makefile_Libraries
+++ b/qf_apps/qf_ssi_ai_app/GCC_Project/makefiles/Makefile_Libraries
@@ -45,3 +45,5 @@ clean:
 	make -f makefiles/Makefile_FPGA clean
 	make -f makefiles/Makefile_cli clean
 	make -f makefiles/Makefile_DatablockManager clean
+	make -f makefiles/Makefile_M4 clean
+	
