--- a/qf_apps/qf_ssi_ai_app/GCC_Project/makefiles/Makefile_common
+++ b/qf_apps/qf_ssi_ai_app/GCC_Project/makefiles/Makefile_common
@@ -7,7 +7,7 @@ R_FILES:=$(addprefix $(MAIN_FPGA_RTL_DIR)$(DIR_SEP),$(FPGA_RTL_SRCS))
 
 DEPFLAGS = -MT $@ -MMD -MP -MF $(DEPEND_PATH)/$*.d
 
-all: $(OBJS) # $(MAIN_FPGA_RTL_DIR)/$(FPGA_RTL_OBJ)
+all: $(OBJS) $(OBJS_CPP) # $(MAIN_FPGA_RTL_DIR)/$(FPGA_RTL_OBJ)
 
 #$(info QLFS SOURCE: ${SRCS})
 #$(info QLFS OBJS: ${OBJS})
@@ -17,6 +17,10 @@ all: $(OBJS) # $(MAIN_FPGA_RTL_DIR)/$(FPGA_RTL_OBJ)
 %.o:%.c
 $(OUTPUT_PATH)/%.o: $(SRC_PATH)/%.c $(DEPEND_PATH)/%.d
 	$(CC) $< $(CFLAGS) $(DEPFLAGS) $(INCLUDE_DIRS) -o $@
+	
+%.o:%.cpp
+$(OUTPUT_PATH)/%.o: $(SRC_PATH)/%.cpp $(DEPEND_PATH)/%.d
+	$(CPLUSPLUS) $< $(CFLAGS) $(DEPFLAGS) $(INCLUDE_DIRS) -o $@
 	
 SYMBIFLOW_WARN_PATTERN="^Warning [0-9]\{1,\}:.*no timing specification"
 $(MAIN_FPGA_RTL_DIR)/$(FPGA_RTL_OBJ): $(R_FILES)
